RoadMap center align and whitespace issue fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+.container.line-break {
+   white-space: pre-wrap;
+   margin-bottom: 75px;
+}
+.container.line-break.center-align {
+   text-align: center;
+}
 
 /**
 --  TIMELINE STYLES  --
